agregando validaciones de usuario

--- a/src/components/styles/Form.css
+++ b/src/components/styles/Form.css
@@ -27,3 +27,9 @@ form{
 .txt{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+#txtBienvenida{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: oblique;
+    color: white;
+}
