--- a/src/components/styles/UserHome.css
+++ b/src/components/styles/UserHome.css
@@ -20,3 +20,13 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic  ;
 }
+
+#btnHome{
+    margin-top: 100px;
+    background-color: blue;
+    color: white;
+    padding: 50px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-radius: 10px;
+}
